cleaned up main runners

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@
 hs_err_pid*
 
 /android
-/config
+
 /system
 /out
 .DS_Store
@@ -25,3 +25,7 @@ hs_err_pid*
 # Package Files #
 *.jar
 /lib
+
+
+#Dot Output
+*.dot
